--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,17 @@
 
 {
-  "ConnectionStrings": {
-    "BookstoreContext": "host=localhost;port=5432;database=bookstore;username=fisher_user;password=admin;pooling=true"},
+  
+"ConnectionStrings": {
+  "BookstoreContext": "host =localhost;port=5432;database=bookstore;username=fisher_user;password=admin;pooling=true"
+  
+  },
+
+  
+    "Auth0": {
+      "Domain" : "tWhite08.auth0.com",
+      "ApIdentifier": "https://github.com/tWhite08"
+      },
+  
     
   "Logging": {
     "LogLevel": {
